--- a/catalogo.html
+++ b/catalogo.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RMFKH813V3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-RMFKH813V3');
+        </script>
         <title>Catálogo</title>
     </head>
     <body>
@@ -10,4 +19,5 @@
 
         <p><a href="producto.html">Producto</a></p>
     </body>
+
 </html>
