--- a/producto.html
+++ b/producto.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RMFKH813V3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-RMFKH813V3');
+        </script>
         <title>Producto</title>
     </head>
     <body>
         <h1>Producto</h1>
     </body>
+
 </html>
