--- a/producto.html
+++ b/producto.html
@@ -16,8 +16,13 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
         <h1>Producto</h1>
+
+        <br>
+
+        <button class="btn">Comprar</button>
     </body>
 
 </html>
+
 
 
